# databook

./: CMakeLists.txt  LICENSE  README.md
modules/: databook.ixx  serializable.ixx
modules/formats/: notebook_memory.ixx  notebook_yaml.ixx
modules/notebook/: interface.ixx  notebook.ixx
tests/: CMakeLists.txt
tests/src/notebook/: test_notebook.cpp
